[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "netdev"
version = "0.9.1"
description = "Asynchronous multi-vendor library for interacting with network devices"
authors = ["Sergey Yakovlev <selfuryon@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://netdev.readthedocs.io"
documentation = "https://netdev.readthedocs.io"
repository = "https://github.com/selfuryon/netdev"
keywords = ['netdev','network', 'netmiko', 'asyncio']
classifiers = [
        "Development Status :: 4 - Beta",
        "Framework :: AsyncIO",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "Intended Audience :: Telecommunications Industry",
        "Topic :: System :: Networking",
        "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3"
asyncssh = "^2.2"
sphinx = { version = "^3.0", optional = true}
sphinx_rtd_theme = { version = "^0.4", optional = true}

[tool.poetry.dev-dependencies]
PyYAML = "^5.3"
asyncssh = "^2.2"
black = {version = "^19.10b0",allow-prereleases = true}
pylint = "^2.5"
pyls-black = "^0.4"
pyls-isort = "^0.1"
pytest = "^5.4"
pytest-asyncio = "^0.11.0"
pytest-cov = "^2.8.1"
sphinx = "^3.0"
sphinx_rtd_theme = "^0.4"
python-language-server = {extras = ["rope"], version = "^0.31.10"}

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.black]
line-length = 110
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

