[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "netdev"
version = "0.9.1"
description = "Asynchronous multi-vendor library for interacting with network devices"
authors = ["Sergey Yakovlev <selfuryon@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://netdev.readthedocs.io"
documentation = "https://netdev.readthedocs.io"
repository = "https://github.com/selfuryon/netdev"
keywords = ['netdev','network', 'netmiko', 'asyncio']
classifiers = [
        "Development Status :: 4 - Beta",
        "Framework :: AsyncIO",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "Intended Audience :: Telecommunications Industry",
        "Topic :: System :: Networking",
        "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3"
asyncssh = "^2.4"
sphinx = { version = "^3.2", optional = true}
sphinx_rtd_theme = { version = "^0.5", optional = true}

[tool.poetry.dev-dependencies]
PyYAML = "^5.3"
asyncssh = "^2.4"
black = {version = "^20.8b1",allow-prereleases = true}
pylint = "^2.6"
pyls-black = "^0.4"
pyls-isort = "^0.2"
pytest = "^6.1"
pytest-asyncio = "^0.14"
pytest-cov = "^2.10"
sphinx = "^3.2"
sphinx_rtd_theme = "^0.5"
python-language-server = {extras = ["rope"], version = "^0.35.1"}

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.black]
line-length = 110
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

